--- a/Caddyfile
+++ b/Caddyfile
@@ -2,7 +2,7 @@
   log stdout
   errors stdout
 
-  proxy /v1 {$RF_REGISTRY_IP}:{$RF_REGISTRY_PORT} { transparent }
-  proxy /v2 {$RF_REGISTRY_IP}:{$RF_REGISTRY_PORT} { transparent }
+  proxy /v1 {$RF_REGISTRY_HOST}:{$RF_REGISTRY_PORT} { transparent }
+  proxy /v2 {$RF_REGISTRY_HOST}:{$RF_REGISTRY_PORT} { transparent }
 }
 
